	  support/regression/tests/gcc-torture-execute-20030626-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/gcc-torture-execute-930513-1.c,
	  support/regression/tests/gcc-torture-execute-960327-1.c,
	  support/regression/tests/gcc-torture-execute-980707-1.c,
	  support/regression/tests/snprintf.c:
	  Enable tests that pass due to workaround for bug #2198.

2013-09-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement assertion for linker bug #2198 so it is no longer silent to the user.
	* support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Disable failing test.

2013-09-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Pointer indirect long addressing mode.

2013-09-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Tuned register allocation heuristic.

2013-09-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix loading of upper parts of large values through frame pointer, bug #2209.

2013-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Slightly more efficient addition and loading through frame pointer.

2013-08-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-2205.c: new, added
	* support/regression/tests/*: set svn properties eol and keywords
	* device/lib/clean.mk: add stm8 port to cleaning

2013-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-2208.c:
	  Fix bug #2208.

2013-08-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/ds390/peeph.def,
	  src/hc08/peeph.def,
	  src/mcs51/peeph.def,
	  src/stm8/peeph.def,
	  src/z80/peeph-gbz80.def,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def:
	  Simplified peephole rules.

2013-08-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Rules for bit setting.
	* src/stm8/peep.c: